@@ -1,5 +1,5 @@
 package Dist::Zilla::Plugin::PodSyntaxTests;
-# ABSTRACT: a release test for Pod syntax
+# ABSTRACT: a author test for Pod syntax
 
 use Moose;
 extends 'Dist::Zilla::Plugin::InlineFiles';
@@ -12,14 +12,14 @@ use namespace::autoclean;
 This is an extension of L<Dist::Zilla::Plugin::InlineFiles>, providing the
 following files:
 
-  xt/release/pod-syntax.t   - a standard Test::Pod test
+  xt/author/pod-syntax.t   - a standard Test::Pod test
 
 L<Test::Pod> C<1.41> will be added as a C<develop requires> dependency.
 
 =cut
 
 
-# Register the release test prereq as a "develop requires"
+# Register the author test prereq as a "develop requires"
 # so it will be listed in "dzil listdeps --author"
 sub register_prereqs {
   my ($self) = @_;
@@ -38,7 +38,7 @@ __PACKAGE__->meta->make_immutable;
 1;
 
 __DATA__
-___[ xt/release/pod-syntax.t ]___
+___[ xt/author/pod-syntax.t ]___
 #!perl
 # This file was automatically generated by Dist::Zilla::Plugin::PodSyntaxTests.
 use Test::More;
